# pyrlm-runtime

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LIBRARY_CHANGES.md  LIBRARY_CHANGES_SUMMARY.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
.skills/rlm-development/: SKILL.md
docs/: RETRIEVAL.md
examples/: README_VERTEX.md  README_hybrid_audit.md  _azure_check.py  _debug_single_example.py  bench_repl_python_vs_monty.py  bench_rlm_repl_backends.py  cloud_example.py  complex_reasoning.py  diagnostic_run.py  fruits_r_count_demo.py  gpt4_test.py  hybrid_audit.py  minimal.py  ollama_example.py  ollama_trace_compare.py  oolong_rlm_vs_baseline.py  oolong_three_way_benchmark.py  oolong_three_way_benchmark_vertex.py  requirements_vertex.txt  rich_repl_demo.py  rlm_vs_baseline.py  smart_router_demo.py  test_vertex_adapters.py  trace_viewer_demo.py  vertex_adapter_for_rlm_minimal.py
src/pyrlm_runtime/: __init__.py  context.py  env.py  env_monty.py  policy.py  prompts.py  retrieval.py  rich_trace.py  rlm.py  trace.py  trace_viewer.py
src/pyrlm_runtime/adapters/: azure_openai.py  base.py  generic_chat.py  vertex_ai.py
src/pyrlm_runtime/doctools/: __init__.py  cache.py  policy.py  prompts.py  protocols.py  schema.py  tools.py
src/rlm_runtime/: __init__.py  context.py  env.py  prompts.py  rlm.py  router.py  trace.py
tests/: test_adapters.py  test_context.py  test_doc_tools.py  test_env_monty.py  test_llm_batch.py  test_policy.py  test_repl.py  test_retrieval.py  test_rich_trace.py  test_rlm_loop.py  test_trace.py  test_trace_viewer.py
(+1 files in other folders)
