[project]
name = "rlm-runtime"
version = "0.1.0"
description = "Minimal runtime for Recursive Language Models (RLMs)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "RLM Runtime Contributors" }]
dependencies = ["httpx>=0.27"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "ty>=0.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
